fixed color contrast and ha's linkedin

--- a/style.css
+++ b/style.css
@@ -126,7 +126,7 @@ aside {
   transition: all 0.35s;
 }
 .navbar-default .navbar-header .navbar-brand {
-  color: #fbc5de;
+  color: #645CAA;
   font-family: 'DM Sans', 'Helvetica Neue', Arial, sans-serif;
   font-weight: 700;
   text-transform: lowercase;
@@ -134,7 +134,7 @@ aside {
 }
 .navbar-default .navbar-header .navbar-brand:hover,
 .navbar-default .navbar-header .navbar-brand:focus {
-  color: #fbc5de;
+  color: #645CAA;
 }
 .navbar-default .navbar-header .navbar-toggle {
   font-weight: 700;
@@ -151,11 +151,11 @@ aside {
 }
 .navbar-default .nav > li > a:hover,
 .navbar-default .nav > li > a:focus:hover {
-  color: #fbc5de;
+  color: #645CAA;
 }
 .navbar-default .nav > li.active > a,
 .navbar-default .nav > li.active > a:focus {
-  color: #fbc5de;
+  color: #645CAA;
   background-color: transparent;
 }
 .navbar-default .nav > li.active > a:hover,
